--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,40 @@ nav a {
   font-weight: 800;
 }
 /* header section */
-.header{
-    background: #FFF8F3;
+.header {
+  background: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.bannar{
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
+.bannar {
+  padding: 30px 30px 0 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.bannar-right img{
-    width: 500px;
+.bannar-content{
+    max-width: 585px;
+}
+.bannar-gretting {
+  color: #474747;
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 0px;
+}
+
+.bannar-title {
+  color: #181818;
+  font-size: 60px;
+  font-weight: 700;
+  margin-top: 5px;
+}
+.bannar-text {
+  color: #757575; 
+  font-size: 18px;  
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+.profile-pic {
+  width: 500px;
 }
