--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,18 @@ body {
   font-size: 20px;
   font-weight: 700;
 }
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+  }
 /* nav section */
 nav {
   display: flex;
@@ -54,8 +66,8 @@ nav a {
   align-items: center;
   justify-content: space-between;
 }
-.bannar-content{
-    max-width: 585px;
+.bannar-content {
+  max-width: 585px;
 }
 .bannar-gretting {
   color: #474747;
@@ -71,11 +83,22 @@ nav a {
   margin-top: 5px;
 }
 .bannar-text {
-  color: #757575; 
-  font-size: 18px;  
+  color: #757575;
+  font-size: 18px;
   font-weight: 400;
   margin-bottom: 30px;
 }
 .profile-pic {
   width: 500px;
 }
+/* main  */
+
+/*  about me section */
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px;
+}
+
+
