--- a/css/style.css
+++ b/css/style.css
@@ -110,19 +110,41 @@ main {
   justify-content: space-between;
   margin-top: 30px;
 }
-.about-info{
-    text-align: center;
+.about-info {
+  text-align: center;
 }
 .info-title {
-	color: #757575;
-	font-size: 18px;
-	font-weight: 400;
+  color: #757575;
+  font-size: 18px;
+  font-weight: 400;
 }
-.info-description{
-    color:#474747;
-    font-size: 18px;
-    font-weight: 700;
+.info-description {
+  color: #474747;
+  font-size: 18px;
+  font-weight: 700;
 }
-#what-i-do-description{
-    margin: 0px 130px;
+#what-i-do-description {
+  margin: 30px 130px;
+}
+.skill-container{
+    display: flex;
+    gap: 50px;
+    margin-top: 30px;
+}
+.skills {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title {
+  color: #181818;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 700;
+}
+.skill-description {
+  color: var(--Dark-03, #757575);
+  font-size: 16px;
+  font-weight: 400;
 }
