--- a/css/style.css
+++ b/css/style.css
@@ -169,15 +169,14 @@ main {
   font-size: 30px;
   font-weight: 700;
 }
-.resume-coloumn >.resume-item{
+.resume-coloumn > .resume-item {
   border: 2px sold green;
 }
 .resume-item {
-  
 }
-.resume-item hr{
+.resume-item hr {
   margin: 30px 0;
-  color: #D1D1D1;
+  color: #d1d1d1;
 }
 .resume-item-title {
   color: #474747;
@@ -195,7 +194,33 @@ main {
   font-weight: 400;
   margin-bottom: 30px;
 }
-.resume-download{
+.resume-download {
   text-align: center;
   margin-top: 50px;
+}
+footer {
+  display: flex;
+  justify-content: space-around;
+  background: #fff8f3;
+  padding: 130px 200px;
+}
+.social-links{
+  display: flex;
+  gap: 24px;
+}
+.
+.social-links li {
+  display: inline-flex;
+  margin-right: 30px;
+  list-style: none;
+}
+.footer-title {
+  color: #181818;
+  font-size: 35px;
+  font-weight: 700;
+}
+.footer-description {
+  color: #474747;
+  font-size: 16px;
+  font-weight: 400;
 }
