--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,10 @@ nav a {
 }
 /* header section */
 .header {
-  background: #fff8f3;
-  background-image: url("../images/header_bg.png");
-  background-repeat: no-repeat;
-  background-position: bottom right;
+	background: #fff8f3;
+	background-image: url("../images/header_bg.png"), url('../images/developer.png');
+	background-repeat: no-repeat;
+	background-position: bottom right, top left 25px;
 }
 .bannar {
   padding: 30px 30px 0 150px;
